[package]
name = "rust-hyper"
version = "0.1.0"
authors = ["Jeffrey Pratt <clementi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["macros", "io-std"] }
hyper = "0.13.5"
